# anabu

./: .gitignore  LICENSE  README.md  anabu.org  anabu.org~  anabu.py  pyproject.toml  requirements.txt
anabu/: __main__.py  analysis.py  charts.py  density.py  distribution.py  interface.py  mask.py  photo.py  pinholes.py  ppt.py  standard_settings.csv
exe/: config.json
ppt/: PPT_master.pptx
test_photos/: testresults.csv  testsett.csv
