[tool.poetry]
name = "anabu"
version = "0.8"
description = "Tool for the automated projection photo analysis of black-printed Thin Film samples"
authors = ["Bastian Ebeling <mail@bastianebeling.org>"]

[tool.poetry.dependencies]
python = "3.7.0"
numpy = "1.21.5"
matplotlib = "3.5.1"
scipy = {path = "packages/scipy-1.7.3-cp37-cp37m-linux_armv7l.whl"}
scikit-image = "^0.19.1"
python-pptx = "^0.6.21"

[tool.poetry.dev-dependencies]
pyright = "^0.0.13"
isort = "^5.10.1"
pydebug = "^1.0.3"
flake8 = "^4.0.1"
black = "^21.12b0"
jupyter = "^1.0.0"
pytest = "^6.2.5"
debugpy = "^1.5.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
